style: Fix the style for flatpickr in the dark mode

--- a/app/packs/stylesheets/scaffolds.scss
+++ b/app/packs/stylesheets/scaffolds.scss
@@ -27,7 +27,7 @@ body {
       color: whitesmoke;
     }
 
-    div, span, table {
+    div, span:not([class^='flatpickr-']), table {
       color: whitesmoke;
     }
 
